# PublicKigsProjects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
projects/: CMakeLists.txt
projects/Bounce/: CMakeLists.txt  index.html  indexDebug.html
projects/Bounce/Android/: AndroidManifest.xml  build.xml  kigs.Bounce.Packaging.androidproj
projects/Bounce/Android/assets/: AppInit.xml  Screen_Main.xml
projects/Bounce/Android/res/values/: strings.xml
projects/Bounce/Android/src/com/kigs/: BounceEmpty.java
projects/Bounce/Headers/: Ball.h  Bounce.h  KigsApplication.h  Wall.h
projects/Bounce/Sources/: Ball.cpp  Bounce.cpp  Equation2.cpp
projects/Mandelbrot/: CMakeLists.txt  index.html  indexDebug.html
projects/Mandelbrot/Android/: AndroidManifest.xml  build.xml  kigs.Mandelbrot.Packaging.androidproj
projects/Mandelbrot/Android/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml
projects/Mandelbrot/Android/res/values/: strings.xml
projects/Mandelbrot/Android/src/com/kigs/: MandelbrotEmpty.java
projects/Mandelbrot/Headers/: KigsApplication.h  Mandelbrot.h
projects/Mandelbrot/Sources/: Mandelbrot.cpp  MandelbrotDraw.cpp
projects/PacMan/: CMakeLists.txt  index.html  indexDebug.html
projects/PacMan/Android/: AndroidManifest.xml  build.xml  kigs.PacMan.Packaging.androidproj
projects/PacMan/Android/assets/: AppInit.xml
projects/PacMan/Android/res/values/: strings.xml
projects/PacMan/Android/src/com/kigs/: PacManEmpty.java
projects/PacMan/Headers/: Board.h  Case.h  CharacterBase.h  GameLoop.h  Ghost.h  KigsApplication.h  PacMan.h  Player.h
projects/PacMan/Ressources/: AssetManagerRules.json
projects/PacMan/Ressources/toPack/: LaunchScreen.xml  Pacman.json  Screen_Main.xml  laby2.json
projects/PacMan/Sources/: Board.cpp  CharacterBase.cpp  GameLoop.cpp  Ghost.cpp  PacMan.cpp  Player.cpp
projects/RTNetwork/: CMakeLists.txt
projects/RTNetwork/Data/: CallWalkerScript.txt  launchParams.json
projects/RTNetwork/Data/assets/: AppInit.xml  LaunchScreen.xml  Link.xml  Screen_Main.xml  Thumbnail.xml
projects/RTNetwork/Headers/: KigsApplication.h  RTNetwork.h  TwitterAccount.h
projects/RTNetwork/Sources/: RTNetwork.cpp  TwitterAccount.cpp
projects/TLTightness/: CMakeLists.txt  index.html  indexDebug.html
projects/TLTightness/Android/: AndroidManifest.xml  build.xml  kigs.TLTightness.Packaging.androidproj
projects/TLTightness/Android/assetsTL/: TLTightness_assets.kpkg
projects/TLTightness/Android/res/values/: strings.xml
projects/TLTightness/Android/src/com/kigs/: TLTightnessEmpty.java
projects/TLTightness/Headers/: KigsApplication.h  TLTightness.h  TwitterConnect.h
projects/TLTightness/Ressources/: AMLastDone.json  AppInit.xml  AssetManagerRules.json
projects/TLTightness/Ressources/toPack/: LaunchScreen.xml  Screen_Main.xml  Thumbnail.xml
projects/TLTightness/Sources/: TLTightness.cpp  TwitterConnect.cpp
projects/TLTightness/TmpRessources/: launchParams.json
projects/TwitterAnalyser/: CMakeLists.txt  index.html  indexDebug.html
projects/TwitterAnalyser/Android/: AndroidManifest.xml  build.xml  kigs.TwitterAnalyser.Packaging.androidproj
projects/TwitterAnalyser/Android/assets/: TwitterAnalyser_assets.kpkg
projects/TwitterAnalyser/Android/res/values/: strings.xml
projects/TwitterAnalyser/Android/src/com/kigs/: TwitterAnalyserEmpty.java
projects/TwitterAnalyser/Data/: AppInit.xml  Screen_Main.xml  Thumbnail.xml  WalkerScript.txt
projects/TwitterAnalyser/Data/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml  Thumbnail.xml
projects/TwitterAnalyser/Headers/: CommonTwitterFSMStates.h  GraphDrawer.h  KigsApplication.h  ScrapperManager.h  TwitterAnalyser.h  TwitterConnect.h
projects/TwitterAnalyser/Ressources/: AMLastDone.json  AppInit.xml  AssetManagerRules.json
projects/TwitterAnalyser/Ressources/toPack/: Screen_Main.xml  Thumbnail.xml
projects/TwitterAnalyser/Sources/: CommonTwitterFSMStates.cpp  FollowersFSM.cpp  GraphDrawer.cpp  InteractorsFSM.cpp  LikersFSM.cpp  ReplyerFSM.cpp  RetweetFSM.cpp  ScrapperManager.cpp  TopFSM.cpp  TwitterAnalyser.cpp  TwitterConnect.cpp
projects/TwitterAnalyser/TmpRessources/: TwitterAnalyser_assets.kpkg
projects/VoxelLandscape/: CMakeLists.txt  index.html  indexDebug.html
projects/VoxelLandscape/Android/: AndroidManifest.xml  build.xml  kigs.VoxelLandscape.Packaging.androidproj
projects/VoxelLandscape/Android/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml
projects/VoxelLandscape/Android/res/values/: strings.xml
projects/VoxelLandscape/Android/src/com/kigs/: VoxelLandscapeEmpty.java
projects/VoxelLandscape/Headers/: KigsApplication.h  VOctree.h  VoxelLandscape.h
projects/VoxelLandscape/Resources/: cube.blend  cube.dae  cube.xml
projects/VoxelLandscape/Sources/: VOctree.cpp  VoxelLandscape.cpp
projects/WebScraper/: CMakeLists.txt  readme_nugets.txt
projects/WebScraper/Headers/: WebScraper.h  WebViewHandler.h
projects/WebScraper/Sources/: WebScraper.cpp  WebViewHandler.cpp  all.cpp
projects/YoutubeAnalyser/: CMakeLists.txt
projects/YoutubeAnalyser/Android/assets/: AppInit.xml
projects/YoutubeAnalyser/Data/: launchParams.json
projects/YoutubeAnalyser/Data/assets/: AppInit.xml  ErrorSequence.xml  LaunchScreen.xml  Screen_Main.xml  Thumbnail.xml  imgui.ini
projects/YoutubeAnalyser/Headers/: GraphDrawer.h  KigsApplication.h  YoutubeAnalyser.h  YoutubeConnect.h  YoutubeFSMStates.h
projects/YoutubeAnalyser/Ressources/: AppInit.xml  AssetManagerRules.json
projects/YoutubeAnalyser/Ressources/toPack/: ErrorSequence.xml  LaunchScreen.xml  Screen_Main.xml
projects/YoutubeAnalyser/Sources/: GraphDrawer.cpp  YoutubeAnalyser.cpp  YoutubeConnect.cpp  YoutubeFSMStates.cpp
projects/boules/Android/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml  ball.xml
projects/boules/Headers/: Ball.h  Equation2.h  KigsApplication.h  boules.h
projects/boules/Sources/: Ball.cpp  Equation2.cpp  boules.cpp
